--- a/package.json
+++ b/package.json
@@ -10,17 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.21.1",
-    "twilio": "^4.19.0",
     "axios": "^1.6.2",
     "react-hook-form": "^7.48.2",
-    "zustand": "^4.4.7",
     "react-toastify": "^9.1.3",
-    "date-fns": "^2.30.0",
-    "react-query": "^3.39.3"
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
